--- a/Resources/views/templates/email.html.twig
+++ b/Resources/views/templates/email.html.twig
@@ -1,1 +1,4 @@
-{{ result|raw }}
+<div style="text-align: center; margin-bottom: 20px;"><img id="mainLogo" src="{{ asset(getImagePathById(core_options.siteLogo)) }}" alt="{{ getImageAltById(core_options.siteLogo) }}"></div>
+<div>
+    {{ result|raw }}
+</div>
