--- a/Resources/views/templates/email.html.twig
+++ b/Resources/views/templates/email.html.twig
@@ -1,4 +1,4 @@
-<div style="text-align: center; margin-bottom: 20px;"><img id="mainLogo" src="{{ asset(getImagePathById(core_options.siteLogo)) }}" alt="{{ getImageAltById(core_options.siteLogo) }}"></div>
+<div style="text-align: center; margin-bottom: 20px;"><img id="mainLogo" src="{{ getImagePathById(core_options.siteLogo) }}" alt="{{ getImageAltById(core_options.siteLogo) }}"></div>
 <div>
     {{ result|raw }}
 </div>
