--- a/Resources/views/contact_form_field/_form.html.twig
+++ b/Resources/views/contact_form_field/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-outline-success btn-update-item">{{ button_label|default('Enregistrer') }}</button>
+    <input type="submit" id="form-field-edit-submit" class="hidden"/>
 {{ form_end(form) }}
