--- a/Resources/views/contact_form_field/edit.html.twig
+++ b/Resources/views/contact_form_field/edit.html.twig
@@ -1,2 +1,6 @@
-{{ include('@AkyosForm/contact_form_field/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-{{ include('@AkyosCore/crud/_delete_form.html.twig') }}
+{{ include('@AkyosForm/contact_form_field/_form.html.twig') }}
+<div class="d-flex justify-content-between align-items-center">
+    {{ include('@AkyosCore/crud/_delete_form.html.twig') }}
+    <button class="btn btn-outline-success btn-update-item">Mettre à jour</button>
+    <button type="submit" class="btn btn-effect-ripple btn-xs btn-success btn-minw"><label class="button-label" for="form-field-edit-submit">Mettre à jour</label></button>
+</div>
