--- a/Resources/views/contact_form_submission/edit.html.twig
+++ b/Resources/views/contact_form_submission/edit.html.twig
@@ -14,7 +14,7 @@
                     <li class="nav-item">
                         <a class="nav-link {{ app.request.get('tab') == 'general' or app.request.get('tab') == null ? 'active' : '' }}" id="general-tab" data-toggle="tab" href="#general" role="tab" aria-controls="general" aria-selected="true">Général</a>
                     </li>
-                    {% if entity is defined and entity == 'Post' and core_options.hasPostDocuments %}
+                    {% if entity is defined and entity == 'Post' and cms_options.hasPostDocuments %}
                         <li class="nav-item">
                             <a class="nav-link {{ app.request.get('tab') == 'postdoc' ? 'active' : '' }}" id="postdoc-tab" data-toggle="tab" href="#postdoc" role="tab" aria-controls="postdoc" aria-selected="true">Documents</a>
                         </li>
@@ -50,7 +50,7 @@
 
                     </div>
                     {# POSTDOCUMENT #}
-                    {% if entity is defined and entity == 'Post' and core_options.hasPostDocuments %}
+                    {% if entity is defined and entity == 'Post' and cms_options.hasPostDocuments %}
                         <div class="tab-pane fade {{ app.request.get('tab') == 'postdoc' ? 'show active' : '' }}" id="postdoc" role="tabpanel" aria-labelledby="postdoc-tab">
                             <div class="aky-header-page">
                                 {% include '@AkyosCore/crud/elements/_header.html.twig' with {'title': 'Documents', 'parameters': {'id': el.id}, 'button_add': true, 'header_route' : 'post_document' } %}
