--- a/Resources/views/templates/email/default.html.twig
+++ b/Resources/views/templates/email/default.html.twig
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{{ core_options.siteTitle }} - {{ form.title }}</title>
+    <title>{{ cms_options.siteTitle }} - {{ form.title }}</title>
     <meta name="viewport" content="width=device-width" />
     <style type="text/css">
         @media only screen and (min-device-width: 601px) {
@@ -15,7 +15,7 @@
 <table align="center" border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 600px;" class="content">
     <tr>
         <td align="center" style="padding: 20px 20px 20px 20px; color: #ffffff; font-family: Arial, sans-serif; font-size: 36px; font-weight: bold;">
-            <img src="{{ absolute_url(asset(getImagePathById(core_options.siteLogo))) }}" alt="{{ core_options.siteTitle }}" width="auto" height="80" style="display:block;" />
+            <img src="{{ absolute_url(asset(getImagePathById(cms_options.siteLogo))) }}" alt="{{ cms_options.siteTitle }}" width="auto" height="80" style="display:block;" />
         </td>
     </tr>
     <tr>
@@ -30,12 +30,12 @@
     </tr>
     <tr>
         <td align="center"style="padding: 12px 10px 12px 10px; color: #808080; font-family: Arial, sans-serif; font-size: 12px; line-height: 18px;">
-            {{"now"|date('Y')}} &copy; <a href="{{ absolute_url(path('home')) }}" target="_blank" style="color: #808080; text-decoration: none;"><b>{{ core_options.siteTitle }}</b></a>
+            {{"now"|date('Y')}} &copy; <a href="{{ absolute_url(path('home')) }}" target="_blank" style="color: #808080; text-decoration: none;"><b>{{ cms_options.siteTitle }}</b></a>
         </td>
     </tr>
     <tr>
         <td style="padding: 20px 0 0 0; color: #808080; font-family: Arial, sans-serif; font-size: 10px;">
-            <p>Cet e-mail à été envoyé automatiquement depuis le {{ form.title }} du site {{ core_options.siteTitle }}, merci de ne pas y répondre.</p>
+            <p>Cet e-mail à été envoyé automatiquement depuis le {{ form.title }} du site {{ cms_options.siteTitle }}, merci de ne pas y répondre.</p>
         </td>
     </tr>
 </table>
