--- a/Resources/views/contact_form/new.html.twig
+++ b/Resources/views/contact_form/new.html.twig
@@ -1,4 +1,4 @@
-{% extends '@AkyosCore/layout.html.twig' %}
+{% extends '@AkyosCms/layout.html.twig' %}
 
 {% block title %}Ajouter vos articles{% endblock %}
 
