--- a/Resources/views/contact_form_submission/edit.html.twig
+++ b/Resources/views/contact_form_submission/edit.html.twig
@@ -1,10 +1,10 @@
-{% extends '@AkyosCore/layout.html.twig' %}
+{% extends '@AkyosCms/layout.html.twig' %}
 
 {% block title %}{{ title }}{% endblock %}
 
 {% block page_content %}
 
-    {% include '@AkyosCore/crud/elements/_header.html.twig' with {'title': 'Détail de l\'envoi', 'parameters': (parameters is defined ? parameters : {}), 'button_back': true, 'header_route' : header_route is defined ? header_route : null} %}
+    {% include '@AkyosCms/crud/elements/_header.html.twig' with {'title': 'Détail de l\'envoi', 'parameters': (parameters is defined ? parameters : {}), 'button_back': true, 'header_route' : header_route is defined ? header_route : null} %}
 
     <div class="content" style="width: 100% !important" data-type="{{ entity is defined ? entity : '' }}" data-typeid="{{ el.id is defined ? el.id : '' }}">
         <div class="row">
@@ -53,7 +53,7 @@
                     {% if entity is defined and entity == 'Post' and cms_options.hasPostDocuments %}
                         <div class="tab-pane fade {{ app.request.get('tab') == 'postdoc' ? 'show active' : '' }}" id="postdoc" role="tabpanel" aria-labelledby="postdoc-tab">
                             <div class="aky-header-page">
-                                {% include '@AkyosCore/crud/elements/_header.html.twig' with {'title': 'Documents', 'parameters': {'id': el.id}, 'button_add': true, 'header_route' : 'post_document' } %}
+                                {% include '@AkyosCms/crud/elements/_header.html.twig' with {'title': 'Documents', 'parameters': {'id': el.id}, 'button_add': true, 'header_route' : 'post_document' } %}
 
                             </div>
                             <table class="table aky-table">
@@ -103,19 +103,19 @@
                     {% if hasSeo(entity) %}
                         <div class="tab-pane fade" id="seo" role="tabpanel" aria-labelledby="seo-tab">
                             {{ render(controller(
-                                'Akyos\\CoreBundle\\Controller\\Back\\SeoController::index',
+                                'Akyos\\CmsBundle\\Controller\\Back\\SeoController::index',
                                 { 'type': entity, 'typeId': el.id, 'route' : route }
                             )) }}
                         </div>
                     {% endif %}
                     {# OPTIONS #}
                     <div class="tab-pane fade" id="options" role="tabpanel" aria-labelledby="options-tab">
-                        {{ include('@AkyosCore/crud/_delete_form.html.twig') }}
+                        {{ include('@AkyosCms/crud/_delete_form.html.twig') }}
                     </div>
                 </div>
             </div>
             <div class="col-md-2">
-                {% include '@AkyosCore/crud/elements/_sidebar.html.twig' %}
+                {% include '@AkyosCms/crud/elements/_sidebar.html.twig' %}
             </div>
         </div>
     </div>
