--- a/Resources/views/contact_form_submission/edit.html.twig
+++ b/Resources/views/contact_form_submission/edit.html.twig
@@ -6,17 +6,22 @@
 
     {% include '@AkyosCms/crud/elements/_header.html.twig' with {'title': 'Détail de l\'envoi', 'parameters': (parameters is defined ? parameters : {}), 'button_back': true, 'header_route' : header_route is defined ? header_route : null} %}
 
-    <div class="content" style="width: 100% !important" data-type="{{ entity is defined ? entity : '' }}" data-typeid="{{ el.id is defined ? el.id : '' }}">
+    <div class="content" style="width: 100% !important" data-type="{{ entity is defined ? entity : '' }}"
+         data-typeid="{{ el.id is defined ? el.id : '' }}">
         <div class="row">
             <div class="col-md-10">
                 <ul class="nav nav-tabs" id="tabs" role="tablist">
                     {# GENERAL #}
                     <li class="nav-item">
-                        <a class="nav-link {{ app.request.get('tab') == 'general' or app.request.get('tab') == null ? 'active' : '' }}" id="general-tab" data-toggle="tab" href="#general" role="tab" aria-controls="general" aria-selected="true">Général</a>
+                        <a class="nav-link {{ app.request.get('tab') == 'general' or app.request.get('tab') == null ? 'active' : '' }}"
+                           id="general-tab" data-toggle="tab" href="#general" role="tab" aria-controls="general"
+                           aria-selected="true">Général</a>
                     </li>
                     {% if entity is defined and entity == 'Post' and cms_options.hasPostDocuments %}
                         <li class="nav-item">
-                            <a class="nav-link {{ app.request.get('tab') == 'postdoc' ? 'active' : '' }}" id="postdoc-tab" data-toggle="tab" href="#postdoc" role="tab" aria-controls="postdoc" aria-selected="true">Documents</a>
+                            <a class="nav-link {{ app.request.get('tab') == 'postdoc' ? 'active' : '' }}"
+                               id="postdoc-tab" data-toggle="tab" href="#postdoc" role="tab" aria-controls="postdoc"
+                               aria-selected="true">Documents</a>
                         </li>
                     {% endif %}
 
@@ -25,18 +30,21 @@
                     {# SEO #}
                     {% if hasSeo(entity) %}
                         <li class="nav-item">
-                            <a class="nav-link" id="seo-tab" data-toggle="tab" href="#seo" role="tab" aria-controls="seo" aria-selected="true">Référencement</a>
+                            <a class="nav-link" id="seo-tab" data-toggle="tab" href="#seo" role="tab"
+                               aria-controls="seo" aria-selected="true">Référencement</a>
                         </li>
                     {% endif %}
                     {# OPTIONS #}
                     <li class="nav-item">
-                        <a class="nav-link" id="options-tab" data-toggle="tab" href="#options" role="tab" aria-controls="options" aria-selected="true">Options</a>
+                        <a class="nav-link" id="options-tab" data-toggle="tab" href="#options" role="tab"
+                           aria-controls="options" aria-selected="true">Options</a>
                     </li>
                 </ul>
 
                 <div class="tab-content" id="tabsContent">
                     {# GENERAL #}
-                    <div class="tab-pane fade {{ app.request.get('tab') == 'general' or app.request.get('tab') == null ? 'show active' : '' }} " id="general" role="tabpanel" aria-labelledby="general-tab">
+                    <div class="tab-pane fade {{ app.request.get('tab') == 'general' or app.request.get('tab') == null ? 'show active' : '' }} "
+                         id="general" role="tabpanel" aria-labelledby="general-tab">
                         <div class="form">
                             {{ form_start(form, {'action' : path(route~'_edit', {'id': el.id})}) }}
                             {{ form_widget(form) }}
@@ -51,7 +59,8 @@
                     </div>
                     {# POSTDOCUMENT #}
                     {% if entity is defined and entity == 'Post' and cms_options.hasPostDocuments %}
-                        <div class="tab-pane fade {{ app.request.get('tab') == 'postdoc' ? 'show active' : '' }}" id="postdoc" role="tabpanel" aria-labelledby="postdoc-tab">
+                        <div class="tab-pane fade {{ app.request.get('tab') == 'postdoc' ? 'show active' : '' }}"
+                             id="postdoc" role="tabpanel" aria-labelledby="postdoc-tab">
                             <div class="aky-header-page">
                                 {% include '@AkyosCms/crud/elements/_header.html.twig' with {'title': 'Documents', 'parameters': {'id': el.id}, 'button_add': true, 'header_route' : 'post_document' } %}
 
@@ -72,19 +81,28 @@
                                             {{ doc.title }}
                                         </td>
                                         <td>
-                                            <form action="{{ path('core_change_position', {'route' : 'post', 'el' : 'Post', 'id' : doc.id, 'bundle' : 'CoreBundle' }) }}" method="post">
-                                                <input class="form-control" type="number" name="position" value="{{ doc.position }}" min="0" max="{{ el.postDocuments|length - 1 }}">
+                                            <form action="{{ path('core_change_position', {'route' : 'post', 'el' : 'Post', 'id' : doc.id, 'bundle' : 'CoreBundle' }) }}"
+                                                  method="post">
+                                                <input class="form-control" type="number" name="position"
+                                                       value="{{ doc.position }}" min="0"
+                                                       max="{{ el.postDocuments|length - 1 }}">
                                             </form>
                                         </td>
                                         <td>
                                             {{ doc.private ? '<i class="fas fa-lock"></i>':  '<i class="fas fa-lock-open"></i>' }}
                                         </td>
                                         <td>
-                                            <a class="btn btn-primary btn-sm" href="{{ path('post_document_edit', {'id': doc.id}) }}"><i class="fas fa-pencil-alt"></i></a>
-                                            <form method="post" class="not-submit index-delete" action="{{ path('post_document_delete', {'id': doc.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
+                                            <a class="btn btn-primary btn-sm"
+                                               href="{{ path('post_document_edit', {'id': doc.id}) }}"><i
+                                                        class="fas fa-pencil-alt"></i></a>
+                                            <form method="post" class="not-submit index-delete"
+                                                  action="{{ path('post_document_delete', {'id': doc.id}) }}"
+                                                  onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
                                                 <input type="hidden" name="_method" value="DELETE">
-                                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ doc.id) }}">
-                                                <button class="btn btn-danger btn-sm"><i class="fas fa-times"></i></button>
+                                                <input type="hidden" name="_token"
+                                                       value="{{ csrf_token('delete' ~ doc.id) }}">
+                                                <button class="btn btn-danger btn-sm"><i class="fas fa-times"></i>
+                                                </button>
                                             </form>
                                         </td>
                                     </tr>
