--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -1,10 +1,10 @@
 // Vars colors
-$black : rgba(10,10,10, 1.0);
-$white : rgba(255,255,255, 1.0);
+$black: rgba(10, 10, 10, 1.0);
+$white: rgba(255, 255, 255, 1.0);
 
-$primary : #E5322D;
-$second : #041D53;
+$primary: #E5322D;
+$second: #041D53;
 
-$darkgrey : #252525;
+$darkgrey: #252525;
 
 
